refactor: create bascis structure of nextjs

--- a/old/src/html/header.html
+++ b/old/src/html/header.html
@@ -5,53 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;500;600;700&family=Inter&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;500;600;700&family=Inter&display=swap"
+      rel="stylesheet"
+    />
     <!-- STYLES -->
     <link rel="stylesheet" type="text/css" href="./css/slick.css" />
     <link rel="stylesheet" href="./css/style.min.css" />
     <title>Baza Trainee</title>
   </head>
-<body>
-  <header class="header" id="header">
-    <div class="container header__container">
-      <div class="header__logo">
-        <a href="/" class="header__logo-link">
-          <svg class="header__logo-img">
-            <use href="@img/sprite.svg#logo-black"></use>
-          </svg>
-        </a>
-      </div>
-      <ul class="header__nav">
-        <li class="header__nav-elem">
-          <a href="#" class="header__nav-link">Проєкти</a>
-        </li>
-        <li class="header__nav-elem">
-          <a href="#" class="header__nav-link">Партнери</a>
-        </li>
-        <li class="header__nav-elem">
-          <a href="#" class="header__nav-link">Взяти участь</a>
-        </li>
-        <li class="header__nav-elem">
-          <a href="#" class="header__nav-link">Контакти</a>
-        </li>
-      </ul>
-      <div class="header__lang">
-        <button class="header__lang-btn" id="active-lang">
-          UA
-          <svg class="header__lang-arrow">
-            <use href="@img/sprite.svg#arrow-bottom"></use>
-          </svg>
-        </button>
-        <ul class="header__lang-list" id="lang-list">
-          <li class="header__lang-elem">
-            <button class="header__lang-btn"><span>EN</span></button>
-          </li>
-          <li class="header__lang-elem">
-            <button class="header__lang-btn"><span>PL</span></button>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </header>
+  <body></body>
+</html>
